# SeqForge

./: .gitignore  Analyse_FASTA.hpp  Analyse_FASTQ.hpp  Analyse_HK.cpp  Analyse_HK.hpp  CMakeLists.txt  LICENSE  Makefile  README.md  devops  devops_Hermine.cpp  mkdocs.yml  test.fasta  userPrompt.cpp  userPrompt.hpp  verification_FASTA.cpp  verification_FASTA.hpp  verification_FASTQ.cpp  verification_FASTQ.hpp  verification_HK.cpp  verification_HK.hpp
docs/: about.md  design.md  encoding.md  index.md  installation.md  mapping.md  usage.md
fasta_files/: demo_reads.fasta  demo_reference.fasta  test.fasta
html/: Analyse__FASTA_8hpp_source.html  Analyse__FASTQ_8hpp_source.html  Analyse__HK_8hpp_source.html  annotated.html  classAnalyse__FASTA-members.html  classAnalyse__FASTA.html  classAnalyse__FASTA__inherit__graph.map  classAnalyse__FASTA__inherit__graph.md5  classAnalyse__FASTQ-members.html  classAnalyse__FASTQ.html  classAnalyse__FASTQ__inherit__graph.map  classAnalyse__FASTQ__inherit__graph.md5  classAnalyse__HK-members.html  classAnalyse__HK.html  classAnalyse__HK__coll__graph.map  classAnalyse__HK__coll__graph.md5  classAnalyse__HK__inherit__graph.map  classAnalyse__HK__inherit__graph.md5  classes.html  classuserPrompt-members.html  classuserPrompt.html  classuserPrompt__coll__graph.map  classuserPrompt__coll__graph.md5  classverification__FASTA-members.html  classverification__FASTA.html  classverification__FASTA__coll__graph.map  classverification__FASTA__inherit__graph.md5  classverification__FASTA_ada9e4baa3e50c366e3088432d0e95067_cgraph.map  (+52 more)
src/: Mapper.cpp  (+16 more)
(+30 files in other folders)
